@@ -92,6 +92,9 @@ is_deeply($attribute, {
   is_sentence_end => 0,
   Gtk2::Pango -> CHECK_VERSION(1, 4, 0) ?
     (backspace_deletes_character => 1) :
+    (),
+  Gtk2::Pango -> CHECK_VERSION(1, 17, 0) ? # FIXME: 1.18
+    (is_expandable_space => 0) :
     ()
 });
 
